--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,4 +6,15 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
+    <com.tmrtapps.mediaplayerview.MediaPlayerView
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:albumArtPlaceholder="@drawable/dog"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+    </com.tmrtapps.mediaplayerview.MediaPlayerView>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
