--- a/MediaPlayerView/src/main/res/layout/media_player.xml
+++ b/MediaPlayerView/src/main/res/layout/media_player.xml
@@ -5,7 +5,7 @@
     android:layout_height="wrap_content">
 
     <androidx.cardview.widget.CardView
-        android:id="@+id/rootCardView"
+        android:id="@+id/cardView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -36,7 +36,8 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:adjustViewBounds="true"
-                    android:contentDescription="@string/cover_image">
+                    android:contentDescription="@string/cover_image"
+                    android:src="@drawable/default_album_art_image">
 
                 </ImageView>
 
@@ -94,7 +95,7 @@
             </TextView>
 
             <TextView
-                android:id="@+id/maxDurationTextView"
+                android:id="@+id/maxProgressTextView"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="16dp"
@@ -112,6 +113,7 @@
                 android:layout_marginEnd="16dp"
                 android:contentDescription="@string/media_button"
                 android:src="@drawable/ic_round_skip_previous_24"
+                android:stateListAnimator="@xml/animate_scale"
                 app:layout_constraintBottom_toBottomOf="@+id/playButton"
                 app:layout_constraintEnd_toStartOf="@+id/playButton"
                 app:layout_constraintTop_toTopOf="@+id/playButton">
@@ -126,6 +128,7 @@
                 android:layout_marginBottom="16dp"
                 android:contentDescription="@string/media_button"
                 android:src="@drawable/ic_round_play_arrow_24"
+                android:stateListAnimator="@xml/animate_scale"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -140,6 +143,7 @@
                 android:layout_marginStart="16dp"
                 android:contentDescription="@string/media_button"
                 android:src="@drawable/ic_round_skip_next_24"
+                android:stateListAnimator="@xml/animate_scale"
                 app:layout_constraintBottom_toBottomOf="@+id/playButton"
                 app:layout_constraintStart_toEndOf="@+id/playButton"
                 app:layout_constraintTop_toTopOf="@+id/playButton">
