--- a/MediaPlayerView/src/main/res/values/attrs.xml
+++ b/MediaPlayerView/src/main/res/values/attrs.xml
@@ -6,9 +6,8 @@
         <attr name="boxColor" format="reference|color" />
         <attr name="boxCornerRadius" format="dimension" />
         <attr name="boxElevation" format="dimension" />
-        <attr name="boxMargin" format="dimension" />
-        <attr name="errorColorPrimary" format="reference|color" />
-        <attr name="errorColorSecondary" format="reference|color" />
+        <attr name="boxPadding" format="dimension" />
+        <attr name="boxErrorColor" format="reference|color" />
 
         <attr name="albumArtIsVisible" format="boolean" />
         <attr name="albumArtWidth" format="dimension">
@@ -27,15 +26,38 @@
         <attr name="albumArtBoxCornerRadius" format="dimension" />
         <attr name="albumArtBoxElevation" format="dimension" />
         <attr name="albumArtPlaceholder" format="reference" />
+        <attr name="albumArtScaleType" format="integer">
+            <enum name="centerCrop" value="6"/>
+            <enum name="center" value="5"/>
+            <enum name="fitCenter" value="3"/>
+            <enum name="centerInside" value="7"/>
+            <enum name="fitEnd" value="4"/>
+            <enum name="fitStart" value="2"/>
+            <enum name="fitXY" value="1"/>
+            <enum name="matrix" value="0"/>
+        </attr>
 
         <attr name="titleIsVisible" format="boolean" />
         <attr name="titleTextSize" format="dimension" />
         <attr name="titleTextColor" format="reference|color" />
+        <attr name="titleFontFamily" format="string"/>
+        <attr name="titleTextStyleTypeFace" format="integer">
+            <enum name="bold" value="1"/>
+            <enum name="bold_italic" value="3"/>
+            <enum name="italic" value="2"/>
+            <enum name="normal" value="0"/>
+        </attr>
 
         <attr name="artistIsVisible" format="boolean" />
         <attr name="artistTextSize" format="dimension" />
         <attr name="artistTextColor" format="reference|color" />
-        <attr name="textFontFamily" format="string"/>
+        <attr name="artistFontFamily" format="string"/>
+        <attr name="artistTextStyleTypeFace" format="integer">
+            <enum name="bold" value="1"/>
+            <enum name="bold_italic" value="3"/>
+            <enum name="italic" value="2"/>
+            <enum name="normal" value="0"/>
+        </attr>
 
         <attr name="seekBarIsVisible" format="boolean" />
         <attr name="seekBarMarginTop" format="dimension" />
@@ -45,6 +67,13 @@
 
         <attr name="progressTextColor" format="reference|color" />
         <attr name="progressTextSize" format="dimension" />
+        <attr name="progressFontFamily" format="string"/>
+        <attr name="progressTextStyleTypeFace" format="integer">
+            <enum name="bold" value="1"/>
+            <enum name="bold_italic" value="3"/>
+            <enum name="italic" value="2"/>
+            <enum name="normal" value="0"/>
+        </attr>
 
         <attr name="playButtonIsVisible" format="boolean" />
         <attr name="playButtonSize" format="dimension" />
