--- a/MediaPlayerView/src/main/res/values/dimens.xml
+++ b/MediaPlayerView/src/main/res/values/dimens.xml
@@ -12,7 +12,7 @@
     <dimen name="boxStrokeWidth">0dp</dimen>
     <dimen name="boxCornerRadius">8dp</dimen>
     <dimen name="boxElevation">10dp</dimen>
-    <dimen name="boxMargin">16dp</dimen>
+    <dimen name="boxPadding">16dp</dimen>
 
     <dimen name="titleTextSize">16sp</dimen>
 
@@ -20,7 +20,7 @@
 
     <dimen name="seekBarMarginTop">16dp</dimen>
 
-    <dimen name="progressTextSize">14sp</dimen>
+    <dimen name="progressTextSize">12sp</dimen>
 
     <dimen name="playButtonMarginTop">16dp</dimen>
     <dimen name="playButtonMarginBottom">16dp</dimen>
